--- a/contacts-app/app/styles/global.css
+++ b/contacts-app/app/styles/global.css
@@ -4,7 +4,7 @@
   --heading-md: 1.5rem;
   --heading: 1rem;
 
-  --background: 39deg 100% 85%;
+  --background: 211deg 100% 90%;
   --foreground: 0deg 100% 100%;
 
   --primary: 291deg 64% 42%;
@@ -29,25 +29,25 @@
   --ring: 0 0 0 var(--ring-gap) hsl(var(--foreground)),
     0 0 0 calc(var(--ring-width) + var(--ring-gap)) hsl(var(--ring-color));
 
-  --shadow-color: 39deg 46% 47%;
-  --shadow-elevation-low: 0.3px 0.3px 0.4px hsl(var(--shadow-color) / 0.58),
-    0.5px 0.4px 0.6px -1.7px hsl(var(--shadow-color) / 0.47),
-    1.2px 1.2px 1.7px -3.5px hsl(var(--shadow-color) / 0.36);
-  --shadow-elevation-medium: 0.3px 0.3px 0.4px hsl(var(--shadow-color) / 0.49),
-    0.6px 0.6px 0.8px -0.9px hsl(var(--shadow-color) / 0.43),
-    1.3px 1.3px 1.8px -1.7px hsl(var(--shadow-color) / 0.38),
-    3px 2.9px 4.1px -2.6px hsl(var(--shadow-color) / 0.32),
-    6.1px 6px 8.3px -3.5px hsl(var(--shadow-color) / 0.26);
-  --shadow-elevation-high: 0.3px 0.3px 0.4px hsl(var(--shadow-color) / 0.45),
-    1.1px 1px 1.4px -0.4px hsl(var(--shadow-color) / 0.43),
-    1.9px 1.9px 2.6px -0.8px hsl(var(--shadow-color) / 0.4),
-    3.2px 3.1px 4.3px -1.2px hsl(var(--shadow-color) / 0.38),
-    5px 4.9px 6.8px -1.6px hsl(var(--shadow-color) / 0.35),
-    7.8px 7.6px 10.6px -1.9px hsl(var(--shadow-color) / 0.32),
-    11.8px 11.5px 16.1px -2.3px hsl(var(--shadow-color) / 0.3),
-    17.2px 16.7px 23.4px -2.7px hsl(var(--shadow-color) / 0.27),
-    24.4px 23.7px 33.2px -3.1px hsl(var(--shadow-color) / 0.25),
-    33.5px 32.6px 45.6px -3.5px hsl(var(--shadow-color) / 0.22);
+  --shadow-color: 211deg 40% 62%;
+  --shadow-elevation-low: 0px 0.4px 0.5px hsl(var(--shadow-color) / 0.27),
+    0px 0.7px 0.8px -1.2px hsl(var(--shadow-color) / 0.27),
+    0px 1.5px 1.7px -2.5px hsl(var(--shadow-color) / 0.27);
+  --shadow-elevation-medium: 0px 0.4px 0.5px hsl(var(--shadow-color) / 0.23),
+    0px 1.1px 1.2px -0.6px hsl(var(--shadow-color) / 0.23),
+    0px 2px 2.3px -1.2px hsl(var(--shadow-color) / 0.23),
+    0px 4px 4.5px -1.9px hsl(var(--shadow-color) / 0.23),
+    0px 7.7px 8.7px -2.5px hsl(var(--shadow-color) / 0.23);
+  --shadow-elevation-high: 0px 0.4px 0.5px hsl(var(--shadow-color) / 0.21),
+    0px 1.7px 1.9px -0.3px hsl(var(--shadow-color) / 0.21),
+    0px 3px 3.4px -0.6px hsl(var(--shadow-color) / 0.21),
+    0px 4.5px 5.1px -0.8px hsl(var(--shadow-color) / 0.21),
+    0px 6.5px 7.3px -1.1px hsl(var(--shadow-color) / 0.21),
+    0px 9.4px 10.6px -1.4px hsl(var(--shadow-color) / 0.21),
+    -0.1px 13.3px 15px -1.7px hsl(var(--shadow-color) / 0.21),
+    -0.1px 18.5px 20.8px -1.9px hsl(var(--shadow-color) / 0.21),
+    -0.1px 25.5px 28.7px -2.2px hsl(var(--shadow-color) / 0.21),
+    -0.2px 34.3px 38.6px -2.5px hsl(var(--shadow-color) / 0.21);
 }
 
 *:focus:not(:focus-visible) {
@@ -140,6 +140,13 @@ fieldset > input {
   width: 100%;
 }
 
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
 [hidden] {
   display: none;
 }
@@ -165,6 +172,10 @@ fieldset > input {
 
 .heading {
   font-size: var(--heading);
+}
+
+.h-full {
+  height: 100%;
 }
 
 .button__icon {
