--- a/contacts-app/app/styles/global.css
+++ b/contacts-app/app/styles/global.css
@@ -151,6 +151,14 @@ li {
   display: none;
 }
 
+.relative {
+  position: relative;
+}
+
+.absolute {
+  position: absolute;
+}
+
 .foreground {
   background-color: hsl(var(--foreground));
 }
