--- a/contacts-app/app/styles/users.css
+++ b/contacts-app/app/styles/users.css
@@ -71,6 +71,14 @@ a + a {
   justify-content: center;
 }
 
+.container__flex--justify-between {
+  justify-content: space-between;
+}
+
+.container__flex--align-baseline {
+  align-items: baseline;
+}
+
 .container__flex--gap-2 {
   gap: 0.5rem;
 }
@@ -108,10 +116,6 @@ a + a {
   box-shadow: var(--shadow-elevation-medium);
 }
 
-.container__heading--center {
-  align-self: center;
-}
-
 .container__link {
   color: var(--gray-500);
   width: fit-content;
@@ -125,6 +129,31 @@ a + a {
   box-shadow: var(--ring);
 }
 
+.container__link--md {
+  font-size: 1.125rem;
+}
+
+.container__link--back {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  column-gap: 8px;
+  top: -32px;
+}
+
+.container__link--new > svg,
+.container__link--back > svg {
+  transition: transform 300ms cubic-bezier(0.42, 0.9, 0.7, 0.77);
+}
+
+.container__link--new:hover > svg {
+  transform: rotateZ(90deg);
+}
+
+.container__link--back:hover > svg {
+  transform: translateX(25%);
+}
+
 .container__list__element {
   display: flex;
 }
@@ -135,5 +164,5 @@ a + a {
 }
 
 .fixed__wrapper {
-  width: min(100%, 400px);
+  width: 250px;
 }
